corrected spacing between elements on homepage

--- a/src/index.css
+++ b/src/index.css
@@ -50,15 +50,25 @@
     }
     section {
       flex-direction: row;
-      justify-content: space-evenly;
+      justify-content: center;
+    }
+    section > * {
+        margin: 2rem 1rem;
+    }
+    aside {
+      justify-content: center;
     }
     aside p {
       font-size: 1.3rem;
+      margin: 2rem 1rem;
     }
   }
   @media only screen and (min-width: 780px) {
     #photo {
       width: 30%;
+    }
+    section > * {
+        margin: 2rem 1.5rem;
     }
   }
   /* Desktop Styles */
@@ -66,8 +76,5 @@
     #photo {
       width: 20%;
       margin: 2rem 0 1.5rem;
-    }
-    section {
-      margin: 2rem 0;
     }
   }
